--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="app">
-        <span p-text="go"></span>
+        <span p-text="message"></span>
         <br>
         <input type="text" p-model="message" />
     </div>
